# PyDeskUI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: contributing.md
.history/: README_20211210153250.md  README_20211210163821.md  README_20211210174538.md  tk_20211209180058.py  tk_20211209180143.py  tk_20211209180238.py  tk_20211209180303.py  tk_20211209180421.py  tk_20211209180511.py  tk_20211209180556.py  tk_20211209181123.py  tk_20211209182056.py  tk_20211209182126.py  tk_20211209182238.py  tk_20211209182248.py  tk_20211209182623.py  tk_20211209182708.py  tk_20211209182739.py  tk_20211210141539.py  tk_20211210143709.py  tk_20211210143954.py  tk_20211210144434.py  tk_20211210144658.py  tk_20211210144800.py  validation_20211210152327.py  validation_20211210152347.py  validation_20211210152431.py  validation_20211210153145.py
.history/core/: basic-widgets_20211210154739.py  basic-widgets_20211210154854.py  basic-widgets_20211210155135.py  basic-widgets_20211210155151.py  basic-widgets_20211210155322.py  basic-widgets_20211210155339.py  basic-widgets_20211210155349.py  basic-widgets_20211210155430.py  basic-widgets_20211210155549.py  basic-widgets_20211210155613.py  basic-widgets_20211210155714.py  basic-widgets_20211210155908.py  basic-widgets_20211210160049.py  basic-widgets_20211210160219.py  basic-widgets_20211210160314.py  basic-widgets_20211210160411.py  basic-widgets_20211210160425.py  (+71 more)
core/: __init__.py  grid.py  more-widgets.py
pytxui/: button.py  demo.py  input.py  test_svg.py  test_ttkbootstrap.py
(+25 files in other folders)
